--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,2 +1,13 @@
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  cloud_name: "hmwo0k2zr"
+  api_key: "329379665676472"
+  api_secret: "Vl2lTMaE685Hv_vKoUmPtSIL_rU"
+  secure: true
+
+
+development:
+  cloud_name: "hmwo0k2zr"
+  api_key: "329379665676472"
+  api_secret: "Vl2lTMaE685Hv_vKoUmPtSIL_rU"
+  secure: true
